[package]
name = "auth"
description = "chatgpt preauth devicecheck server"
version = "1.0.0"
edition = "2021"
rust-version = "1.75"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
typed-builder = "0.20.0"
time = "0.3.36"
rand = "0.8.5"
moka = { version = "0.12.8", default-features = false, features = ["sync"] }
tokio = { version = "1.40.0", default-features = false, features = ["macros", "signal", "rt-multi-thread"] }
hyper = { version = "0.14", features = ["client", "http1", "server", "tcp", "stream"] }
bytes = "1.7.2"
http = "0.2.12"

clap = { version = "4", features = ["derive", "env"] }
futures-util = "0.3"

# ca
rcgen = { version = "0.12.1", features = ["x509-parser"] }
tokio-rustls = { version = "0.24.1", default-features = false, features = ["tls12"] }
rustls = { version = "0.21.8", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0.4"

# client
reqwest = { version ="0.11", default-features = false, features = ["stream", "socks", "json", "cookies", "rustls-tls"]}

# alloc
mimalloc = { version = "0.1.39", default-features = false }

# log
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[target.'cfg(target_family = "unix")'.dependencies]
daemonize = "0.5.0"
nix = { version = "0.27.1", features = ["signal", "user", "ptrace"]}

[profile.release]
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
panic = "abort"